[package]
name = "sinon-monitor"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["lib", "cdylib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
chrono = "0.4.43"
egui   = "0.33"
ehttp  = "0.6.0"
log    = "0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.33", default-features = true }

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "wgpu",
    "android-native-activity",
    "default_fonts",
] }

android_logger = { version = "0.15", default-features = false }
egui-winit     = { version = "0.33", default-features = false, features = [ "clipboard", "links" ] }
jni            = "0.21.1"
ndk-context    = "0.1.1"
wgpu           = { version = "27", default-features = false, features = [ "gles" ] }
